sandbox/output
StringCalculator.java:15: error: variable result might not have been initialized
                result += a; 
                ^
StringCalculator.java:17: error: variable result might not have been initialized
            return result ;
                   ^
2 errors
